--- a/app/globals.css
+++ b/app/globals.css
@@ -25,7 +25,14 @@ body {
     text-wrap: balance;
   }
 }
+.hide-scrollbar {
+  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+}
 
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;  /* WebKit */
+}
 @layer base {
   :root {
     --background: 0 0% 100%;
